# schedule

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt  vercel.json
api/: index.py
back-end/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
back-end/app/: agents.py  api.py  duckdb.py  main.py  utils.py
back-end/app/core/: config.py
back-end/app/google/sheets/: service.py
back-end/app/models/: files.py  organizations.py  specialims.py
back-end/app/routers/: files.py  organizations.py  specialisms.py
back-end/app/services/: file_service.py  organization_service.py
back-end/data/: examples.csv  mapping.csv  parsed.csv
back-end/notebooks/: steps.ipynb
back-end/notebooks/analysis_turnover/analysis/: oxford_analysis_delay.ipynb  oxford_analysis_turnovertime.ipynb
back-end/notebooks/analysis_turnover/assist/: material_protocol.ipynb
front-end/: README.md  package-lock.json  package.json  tsconfig.app.json
front-end/src/: App.tsx  index.css  main.tsx  routes.tsx
front-end/src/api/: client.ts
front-end/src/api/hooks/: describeQuery.ts  fileExistsQuery.ts  getOrganizationsQuery.ts  sendMessage.ts  uploadFile.ts
front-end/src/components/core/: AppSidebarComponent.tsx
front-end/src/components/ui/: sidebar.tsx  table.tsx
front-end/src/hooks/: use-coordinator.ts
front-end/src/local/: tableStore.ts
front-end/src/pages/: MainPage.tsx
front-end/src/pages/InspectPage/: InspectPage.tsx  index.tsx
front-end/src/types/: mosaic.ts  store.ts
front-end/src/utils/: duckdb.ts  mosaic.ts  node.ts
(+11 files in other folders)
