[project]
name = "back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.0",
    "fastapi-cache2[memcache]>=0.2.2",
    "fastapi[standard]>=0.115.12",
    "fastexcel>=0.14.0",
    "google-auth>=2.40.2",
    "gspread>=6.2.1",
    "pandas>=2.2.3",
    "pydantic-ai>=0.2.10",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
]
